Fix dropdown icon z-index + Add .firebase folder to gitignore

--- a/src/styles/Dropdown.scss
+++ b/src/styles/Dropdown.scss
@@ -1,6 +1,6 @@
 .dropdown {
     display: flex;
-    z-index: 5;
+    z-index: auto;
     align-items: center;
     position: relative;
 }
